Bug 457670 - Crash on double clicking on Git branch name
Summary: Crash on double clicking on Git branch name
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.04.3
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2022-08-09 10:58 UTC by Heinrich Schuchardt
Modified: 2022-08-12 12:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Crash dump with kate debug symbols (5.63 KB, text/vnd.kde.kcrash-report)
2022-08-09 12:47 UTC, Heinrich Schuchardt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Heinrich Schuchardt 2022-08-09 10:58:06 UTC
Application: kate (22.04.3)

Qt Version: 5.15.4
Frameworks Version: 5.96.0
Operating System: Linux 5.15.0-27-generic x86_64
Windowing System: X11
Distribution: Ubuntu Kinetic Kudu (development branch)
DrKonqi: 5.25.4 [KCrashBackend]

-- Information about the crash:
The kate git sidebar app displays the name of the git branch and a small git icon.

Double clicking on the branch name leads to a reproducible crash.

The crash can be reproduced every time.

-- Backtrace:
Application: Kate (kate), signal: Segmentation fault

[KCrash Handler]
#4  0x00007f7f5fcd55ab in QWidget::hasFocus() const () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#5  0x00007f7f5fdf3731 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#6  0x00007f7f5fdf9771 in QLineEdit::clear() () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#7  0x00007f7f581ca575 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/ktexteditor/kateprojectplugin.so
#8  0x00007f7f581ca6a5 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/ktexteditor/kateprojectplugin.so
#9  0x00007f7f5f17c12a in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007f7f5fcaa702 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#11 0x00007f7f5f17c3ca in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#12 0x00007f7f5fcaeb8c in QApplicationPrivate::setFocusWidget(QWidget*, Qt::FocusReason) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#13 0x00007f7f5fce79f7 in QWidget::clearFocus() () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#14 0x00007f7f5fce8aa8 in QWidget::~QWidget() () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#15 0x00007f7f581b390e in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/ktexteditor/kateprojectplugin.so
#16 0x00007f7f581aa493 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/ktexteditor/kateprojectplugin.so
#17 0x00007f7f5f1b3d23 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#18 0x00007f7f5fca3be6 in QAction::triggered(bool) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#19 0x00007f7f5fca68fc in QAction::activate(QAction::ActionEvent) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#20 0x00007f7f5fda22fa in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#21 0x00007f7f5fda2457 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#22 0x00007f7f5fe9f18e in QToolButton::mouseReleaseEvent(QMouseEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#23 0x00007f7f5fced4ee in QWidget::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#24 0x00007f7f5fcaa713 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#25 0x00007f7f5fcb2364 in QApplication::notify(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#26 0x00007f7f5f17c3ca in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#27 0x00007f7f5fcb0e47 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#28 0x00007f7f5fd06d40 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#29 0x00007f7f5fd09fd5 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#30 0x00007f7f5fcaa713 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#31 0x00007f7f5f17c3ca in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#32 0x00007f7f5f564317 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#33 0x00007f7f5f539a3c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#34 0x00007f7f5a060dee in ?? () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#35 0x00007f7f5d46dd3b in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#36 0x00007f7f5d4c26a8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#37 0x00007f7f5d46b3e3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#38 0x00007f7f5f1d5648 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#39 0x00007f7f5f17aceb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#40 0x00007f7f5f183284 in QCoreApplication::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#41 0x000056142145d865 in ?? ()
#42 0x00007f7f5ea99d90 in __libc_start_call_main (main=main@entry=0x56142145b240, argc=argc@entry=2, argv=argv@entry=0x7fffcf11a318) at ../sysdeps/nptl/libc_start_call_main.h:58
#43 0x00007f7f5ea99e40 in __libc_start_main_impl (main=0x56142145b240, argc=2, argv=0x7fffcf11a318, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fffcf11a308) at ../csu/libc-start.c:392
#44 0x000056142145fbd5 in ?? ()
[Inferior 1 (process 15718) detached]

Reported using DrKonqi
Comment 1 Waqar Ahmed 2022-08-09 11:34:25 UTC
cannot reproduce
Comment 2 Waqar Ahmed 2022-08-09 11:35:18 UTC
Can you download kate debug symbols and then create another backtrace?
Comment 3 Heinrich Schuchardt 2022-08-09 12:47:12 UTC
Created attachment 151193 [details]
Crash dump with kate debug symbols
Comment 4 Waqar Ahmed 2022-08-09 13:57:06 UTC
Git commit 81a99c398ebd9da24569e919740c06c4e66db320 by Waqar Ahmed.
Committed on 09/08/2022 at 13:56.
Pushed by waqar into branch 'master'.

QuickDialog: removeEventFilters

M  +6    -0    apps/lib/quickdialog.cpp
M  +1    -0    apps/lib/quickdialog.h

https://invent.kde.org/utilities/kate/commit/81a99c398ebd9da24569e919740c06c4e66db320
Comment 5 Waqar Ahmed 2022-08-12 12:10:36 UTC
Git commit f5d5353f050435f1eb5b42c9fb30f7eab0a10338 by Waqar Ahmed.
Committed on 12/08/2022 at 12:10.
Pushed by waqar into branch 'release/22.08'.

QuickDialog: removeEventFilters

M  +6    -0    apps/lib/quickdialog.cpp
M  +1    -0    apps/lib/quickdialog.h

https://invent.kde.org/utilities/kate/commit/f5d5353f050435f1eb5b42c9fb30f7eab0a10338