QuickDialog: removeEventFilters

BUG: 457670