apps/lib/quickdialog.cpp
@@ -49,6 +49,12 @@ QuickDialog::QuickDialog(QWidget *parent, QWidget *mainWindow)
     setFocus();
 }
 
+QuickDialog::~QuickDialog()
+{
+    m_treeView.removeEventFilter(this);
+    m_lineEdit.removeEventFilter(this);
+}
+
 bool QuickDialog::eventFilter(QObject *obj, QEvent *event)
 {
     // catch key presses + shortcut overrides to allow to have ESC as application wide shortcut, too, see bug 409856
